K1J-1305: Added prefill from xml to renew external certificate (#528)